--- a/itoken-config/src/main/resources/bootstrap.yml
+++ b/itoken-config/src/main/resources/bootstrap.yml
@@ -12,8 +12,8 @@ spring:
         git:
           uri: https://github.com/wszyt/itoken-config-respo.git
           search-paths: respo
-          username: wszyt
-          password: wojiaozyt1998
+          username: 123123
+          password: 123123
   zipkin:
     base-url: http://localhost:9411
 
