--- a/itoken-config-respo/respo/itoken-service-seckill-dev.yml
+++ b/itoken-config-respo/respo/itoken-service-seckill-dev.yml
@@ -1,6 +1,18 @@
 spring:
   application:
     name: itoken-service-seckill
+  datasource:
+    druid:
+      url: jdbc:mysql://localhost:3306/myshop?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      username: root
+      password: 123456
+      initial-size: 1
+      min-idle: 1
+      max-active: 20
+      test-on-borrow: true
+      # MySQL 8.x: com.mysql.cj.jdbc.Driver
+      driver-class-name: com.mysql.jdbc.Driver
 
 server:
   port: 8506
+
