--- a/itoken-config-respo/respo/itoken-service-admin-dev.yml
+++ b/itoken-config-respo/respo/itoken-service-admin-dev.yml
@@ -3,7 +3,7 @@ spring:
     name: itoken-service-admin
   datasource:
     druid:
-      url: jdbc:mysql://192.168.142.130:3306/itoken-service-admin?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      url: jdbc:mysql://localhost:3306/myshop?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
       password: 123456
       initial-size: 1
