--- a/itoken-service-seckill/src/main/resources/bootstrap.yml
+++ b/itoken-service-seckill/src/main/resources/bootstrap.yml
@@ -2,6 +2,17 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-      name: itoken-service-seckill, itoken-client-redis, itoken-client-eureka
+      name: itoken-service-seckill, itoken-client-redis, itoken-client-eureka, itoken-common-service
       label: master
       profile: dev
+  datasource:
+    druid:
+      url: jdbc:mysql://192.168.142.130:3306/itoken-service-admin?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      username: root
+      password: 123456
+      initial-size: 1
+      min-idle: 1
+      max-active: 20
+      test-on-borrow: true
+      # MySQL 8.x: com.mysql.cj.jdbc.Driver
+      driver-class-name: com.mysql.jdbc.Driver
