--- a/itoken-service-admin/src/main/resources/bootstrap.yml
+++ b/itoken-service-admin/src/main/resources/bootstrap.yml
@@ -2,6 +2,6 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-      name: itoken-service-admin, itoken-common-service, itoken-client-redis,, itoken-client-eureka, itoken-client-zipkin, itoken-client-admin
+      name: itoken-service-admin, itoken-common-service, itoken-client-redis, itoken-client-eureka, itoken-client-zipkin, itoken-client-admin
       label: master
       profile: dev
