--- a/itoken-config/src/main/resources/bootstrap.yml
+++ b/itoken-config/src/main/resources/bootstrap.yml
@@ -12,8 +12,8 @@ spring:
         git:
           uri: https://github.com/wszyt/iToken.git
           search-paths: itoken-config-respo/respo
-          username: wszyt
-          password: wojiaozyt1998
+          username: 1
+          password: 1
   zipkin:
     base-url: http://localhost:9411
 
